	o ClassMDplot now allows to set the color if each violin
	o Fanplot and Piechart: changed color palette
	o Fanplot: corrected plotrix function so that colors are mapped more consistently 	
	o InpectVariable: xlim can now be set for optimal histogram and not only for PDEplot	
	o Moved RobustNormalization and RobustNorm_BackTrafo from DatabionicSwarm package available on CRAN
	
Version 1.3.1 (CRAN, 2023-07-18)
	o Minor adaptations for CRAN
	o Switched to new internal API of ScatterDensity for DensityScatter
	
Version 1.3.0 (GitHub, 2023-07-17)
	o DensityScatter: subfunctions externalized in addon package DensityScatter which provides an improved visualization of two-dimensional structures
	o DensityContour: now extracted from former DataVisualizations::DensityScatter function to plot only 2D or 3D contour maps of two-dimensional density estimation
	o Classplot: points are now presented in order of class size, i.e., small classes are plotted last, hence on top, to be always visible. Names for plotly fixed.
	o PlotGraph2D: plotly optionality added.
	o DefaultColorSequence: switched yellow with gold, and yellow with gray42, removed duplicates.
	
Version 1.2.5 (GitHub, 2023-04-27)
	o PlotGraph2D plots verticex and edges based on adjacency matrix and 2D points
	o ClassErrorbar: Plots errorbars at Xvalue positions for one or more than one classes with user means and defined whiskers
	o Bugfix Inspectvariable: on.exit() is now used to give bad user predefined plotting parameters
	
Version 1.2.4 (GitHub, 2023-03-28)
	o DensityScatter: Reimplemted method for option native. IT now plots densities as well as scatter plot instead of only a density-based contour.
	o Bugfix Inspectvariable: PDE plot ylim starts now in zero.
	o Improved InspectVariable() by reducing margins and integrating QQplot()
	o Integrated lwd and pch optionality in QQ-plot function
	o Improved QQplot() by using internally the quantile() function instead approx()