@@ -13,7 +13,7 @@ export(Choroplethmap)
 export(CombineCols)
 export(DensityScatter)
 export(DensityContour)
-export(DiagnosticAbility4Classifiers)
+#export(DiagnosticAbility4Classifiers)
 export(DualaxisLinechart)
 export(DualaxisClassplot)
 export(Fanplot)
@@ -26,7 +26,7 @@ export(InspectScatterplots)
 export(InspectStandardization)
 export(InspectCorrelation)
 export(JitterUniqueValues)
-export(multiplot)
+export(Multiplot)
 export(MAplot)
 export(MDplot)
 export(MDplot4multiplevectors)
