@@ -4,7 +4,8 @@ Version 1.3.2 (GitHub, 2023-08-07)
 	o Fanplot: corrected plotrix function so that colors are mapped more consistently 	
 	o InpectVariable: xlim can now be set for optimal histogram and not only for PDEplot	
 	o Moved RobustNormalization and RobustNorm_BackTrafo from DatabionicSwarm package available on CRAN
-	
+	o Provides first crude version of combining several plots in one layout called Multiplot
+		
 Version 1.3.1 (CRAN, 2023-07-18)
 	o Minor adaptations for CRAN
 	o Switched to new internal API of ScatterDensity for DensityScatter
